tests/fixtures/invalid/pow_bool_float_dict.py
# Cannot call pow() with Bool, Float, Dict[str, int]
x = pow(True, 1.0, {"a": 1})
